Fixed bug with missing background on error panel

--- a/ui/themes/default/style.css
+++ b/ui/themes/default/style.css
@@ -3123,6 +3123,7 @@ div.panelsection span.addlink {
     z-index: 98;
     width: 100%;
     height: 90%;
+    background-color: rgba(255,253,213,1.0);
 }
 
 #m_error input.button,
